@@ -11,8 +11,8 @@ import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
  */
 public class ForcesAndMotionBasicsSimSharing {
     public static enum UserComponents implements IUserComponent {
-        tugOfWarTab, motionTab, frictionTab,
-        massCheckBox, valuesCheckBox, sumOfForcesCheckBox, speedCheckBox, forcesCheckBox, soundCheckBox, goButton, stopButton, returnButton, largeBluePuller, mediumBluePuller, smallBluePuller1, smallBluePuller2, largeRedPuller, mediumRedPuller, smallRedPuller1, smallRedPuller2, appliedForceSliderKnob, frictionSliderKnob, fridge, crate1, crate2, girl, man, trash, gift, appliedForceTextField, speedCheckBoxIcon,
+        tugOfWarTab, motionTab, frictionTab, accelerationTab,
+        massCheckBox, valuesCheckBox, sumOfForcesCheckBox, speedCheckBox, accelerometerCheckBox, forcesCheckBox, soundCheckBox, goButton, stopButton, returnButton, largeBluePuller, mediumBluePuller, smallBluePuller1, smallBluePuller2, largeRedPuller, mediumRedPuller, smallRedPuller1, smallRedPuller2, appliedForceSliderKnob, frictionSliderKnob, fridge, crate1, crate2, girl, man, trash, gift, appliedForceTextField, speedCheckBoxIcon, accelerometerCheckBoxIcon,
         showForcesCheckBoxIcon, showSumOfForcesCheckBoxIcon
     }
 
